Updated Readme Paper almost complete Only introduction is left

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -169,4 +169,43 @@
   url      = {https://www.sciencedirect.com/science/article/pii/S0031320399001971},
 }
 
+@InProceedings{inproceedings,
+  author  = {Ciresan, Dan and Meier, Ueli and Masci, Jonathan and Gambardella, Luca Maria and Schmidhuber, Jürgen},
+  title   = {Flexible, High Performance Convolutional Neural Networks for Image Classification.},
+  year    = {2011},
+  month   = {07},
+  pages   = {1237-1242},
+  doi     = {10.5591/978-1-57735-516-8/IJCAI11-210},
+  journal = {International Joint Conference on Artificial Intelligence IJCAI-2011},
+}
+
+@Article{article2,
+  author  = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey},
+  journal = {Neural Information Processing Systems},
+  title   = {ImageNet Classification with Deep Convolutional Neural Networks},
+  year    = {2012},
+  month   = {01},
+  volume  = {25},
+  doi     = {10.1145/3065386},
+}
+
+@InProceedings{yamaguchi1990neural,
+  author    = {Yamaguchi, Kouichi and Sakamoto, Kenji and Akabane, Toshio and Fujimoto, Yoshiji},
+  booktitle = {ICSLP},
+  title     = {A neural network for speaker-independent isolated word recognition.},
+  year      = {1990},
+}
+
+@InProceedings{6248110,
+  author    = {Ciregan, Dan and Meier, Ueli and Schmidhuber, Jürgen},
+  booktitle = {2012 IEEE Conference on Computer Vision and Pattern Recognition},
+  title     = {Multi-column deep neural networks for image classification},
+  year      = {2012},
+  month     = {June},
+  pages     = {3642-3649},
+  abstract  = {Traditional methods of computer vision and machine learning cannot match human performance on tasks such as the recognition of handwritten digits or traffic signs. Our biologically plausible, wide and deep artificial neural network architectures can. Small (often minimal) receptive fields of convolutional winner-take-all neurons yield large network depth, resulting in roughly as many sparsely connected neural layers as found in mammals between retina and visual cortex. Only winner neurons are trained. Several deep neural columns become experts on inputs preprocessed in different ways; their predictions are averaged. Graphics cards allow for fast training. On the very competitive MNIST handwriting benchmark, our method is the first to achieve near-human performance. On a traffic sign recognition benchmark it outperforms humans by a factor of two. We also improve the state-of-the-art on a plethora of common image classification benchmarks.},
+  doi       = {10.1109/CVPR.2012.6248110},
+  issn      = {1063-6919},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
